# blender-in-comfyui

./: .gitignore  LICENSE  README.md  __init__.py  node_mappings.py  pyproject.toml
examples/: base.json
nodes/: bl_camera_creator.py  bl_export_model.py  bl_model_merger.py  bl_model_param.py  bl_render.py  bl_save_mesh.py  bl_scene_composer.py  blender_manager.py
